# ChangeLog for sci-geosciences/josm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/josm/ChangeLog,v 1.17 2008/10/07 23:16:39 hanno Exp $

  01 Mar 2009, Fabian Fingerle <fabian@datensalat.eu>
  -josm-1.5_p1348.ebuild, +josm-1.5_p1458.ebuild:
  Bump

  06 Feb 2009; Alistair Bush <ali_bush@gentoo.org> +metadata.xml,
  josm-1.5_p1348.ebuild, josm-1.5_p1365.ebuild:
  QA Fixes.

* josm-1.5_p1348 (30 Jan 2009)

  30 Jan 2009; Fabian Fingerle <fabian@datensalat.eu> -josm-1.5_p1270.ebuild, +josm-1.5_p1348.ebuild:
  Version Bump.

* josm-1.5_p1318 (22 Jan 2009)

  22 Jan 2009; Fabian Fingerle <fabian@datensalat.eu> -josm-1.5_p1184.ebuild, +josm-1.5_p1318.ebuild:
  Version Bump

* josm-1.5_p1270 (16 Jan 2009)

  16 Jan 2009; Fabian Fingerle <fabian@datensalat.eu> -josm-1.5_p1206.ebuild, +josm-1.5_p1270.ebuild:
  Version Bump.

* josm-1.5_p1206 (03 Jan 2009)

  03 Jan 2009; Fabian Fingerle <fabian@datensalat.eu>-josm-1.5_p1145.ebuild +josm-1.5_p1206.ebuild:
  Bump.

* josm-1.5_p1184 (28 Dec 2008)

  28 Dec 2008; Fabian Fingerle <fabian@datensalat.eu> -josm-1.5_p1091.ebuild +josm-1.5_p1184.ebuild:
  Bump.

* josm-1.5_p1145 (18 Dec 2008)

  18 Dec 2008; Fabian Fingerle <fabian@datensalat.eu> -josm-1.5_p1089.ebuild +josm-1.5_p1145.ebuild:
  Bump

* josm-1.5_p1091 (26 Nov 2008)

  26 Nov 2008; Fabian Fingerle <fabian@datensalat.eu> -josm-1.5_p1065.ebuild +josm-1.5_p1091.ebuild:
  Bump

* josm-1.5_p1089 (23 Nov 2008)

  23 Nov 2008; Fabian Fingerle <fabian@datensalat.eu> -josm-1.5_p1059.ebuild +josm-1.5_p1089.ebuild:
  Bump

* josm-1.5_p1065 (04 Nov 2008)

  04 Nov 2008; Fabian Fingerle <fabian@datensalat.eu> +josm-1.5_p1065.ebuild -josm-1.5_p1010.ebuild -josm-1.5_p1049.ebuild:
  Bump.

* josm-1.5_p1059 (30 Oct 2008)

  30 Oct 2008; Fabian Fingerle <fabian@datensalat.eu> +josm-1.5_p1059.ebuild -josm-1.5_p1043.ebuild +josm-1.5_p1010.ebuild
  Bump and add stable release.

* josm-1.5_p1049 (23 Oct 2008)
