@@ -1,8 +1,6 @@
 AUX josm-r1 304 RMD160 a54bbdbbc2cd1b8ca4deeb11604be22df4194444 SHA1 0bd5757ed573a2c274d76c0b4ba4b770134a0734 SHA256 c407df927e62c4e2afbff998e105dfe4084ab07484a4b28a00f196e7dafee3cf
 AUX josm.png 1737 RMD160 81fc37d55d4b6b14f9a35c3ed89da3ecd7d538f2 SHA1 cd51f118224555727279536bb42a634afcef6626 SHA256 fed9c1ef73900e6a3cac162a4006ab8cd972ba29938a857e8af604779109c39f
-DIST josm-snapshot-1365.jar 3900908 RMD160 05add4c35599331363d11a4f1707e0e8f3911a71 SHA1 594d739bf48a725b90b9a77f1e5739048a54bf61 SHA256 43278c1998ea58ecda4b97f36698743b4b8795bb0aca579cb4b1d3695322b28a
-DIST josm-snapshot-1458.jar 4222106 RMD160 6c58b9db4c4b7201aab911ed4333210bdc73007a SHA1 d7548ac44e81faf5d28270cada6d5334bcf91846 SHA256 baa4b821d67764ca7e93f01c4cb110d115f5c2ede7e0c7136e3814207e64623e
-EBUILD josm-1.5_p1365.ebuild 865 RMD160 afaa01ded0a9e345fd91d49a58600e8331f082ea SHA1 d75f9942f8f2078d89c2e95638b7ae8357230fd3 SHA256 324334b320cf6d572e3637dec05311968aefee45521ffcc6ea38f9a02e789f3f
-EBUILD josm-1.5_p1458.ebuild 865 RMD160 afaa01ded0a9e345fd91d49a58600e8331f082ea SHA1 d75f9942f8f2078d89c2e95638b7ae8357230fd3 SHA256 324334b320cf6d572e3637dec05311968aefee45521ffcc6ea38f9a02e789f3f
-MISC ChangeLog 2589 RMD160 1f720b4064adddedba099142cba982769325392e SHA1 03c9cfffd0e945ab872791ae2efb6ea6ce5cdef4 SHA256 a558a3562d8037ffbecd0c3c3e8ae7d7610333c3e318adcca49e3357ea579e84
+DIST josm-snapshot-1460.jar 4247494 RMD160 290d2cb9ca21008c5268f69c1ad2933acebb1039 SHA1 fd149cbba23bd3047a9e79509d4ec407d0640350 SHA256 316d04091b4bbd099fb415f9c34725d6344e62dfbcda5062db9fce538d1f5e10
+EBUILD josm-1.460.ebuild 861 RMD160 4ad0b04b2490ac33455cd22caba3550c666da693 SHA1 6915950528ced4437fd5ca1d4ba7889931c4ed14 SHA256 858bf4fb1c0065c8fa22303c41b8046d79fcf8478108aa6fee408aa7614c801c
+MISC ChangeLog 2759 RMD160 7c54ba2befa5f0d6be7d80a966f7acfa64fb22cc SHA1 0263ecb5fe6aad80d2cc2422cbc4a683327f9f3a SHA256 58402433a15435baffd82333f4b2daabb0573d3a65707c76f704ffba2ee6f6e2
 MISC metadata.xml 155 RMD160 fd746bb2de09e0076727f37ade1fb64f63af8469 SHA1 cf348f100a9c070637df096751aadb213dcfc303 SHA256 470d983a79ec78e77d5413bb72372bc89249a68818d941d3e34ce13dd10c4c36
